--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="https://guyotjs.github.io/bcss/bc.css">
     <link rel="shortcut icon" href="https://guyotjs.github.io/duckclear2.png" type="image/x-icon">
 </head>
-<body data="{val:'Press ↓ to type.'}">
+<body>
     <canvas id="myCanvas"></canvas>
-    <input type="text" bind="val" style="opacity: 0;" value="Press ↓ to type." id="texto"/>
-    <script src='https://snojs.github.io/sno/crystal.js'></script>
     <script src="./moss.js"></script>
     <script src="./home.js"></script>
 </body>
