--- a/german/index.html
+++ b/german/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confrère</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="https://guyotjs.github.io/bcss/bc.css">
     <link rel="shortcut icon" href="https://guyotjs.github.io/duckclear2.png" type="image/x-icon">
 </head>
@@ -13,7 +13,7 @@
     <input type="text" bind="val" style="opacity: 0;" value="Press ↓ to type." id="texto"/>
     <script src='https://snojs.github.io/sno/crystal.js'></script>
     <script src="./german.js"></script>
-    <script src="./moss.js"></script>
-    <script src="./index.js"></script>
+    <script src="../moss.js"></script>
+    <script src="../index.js"></script>
 </body>
 </html>
