--- a/con/galician_present.html
+++ b/con/galician_present.html
@@ -12,7 +12,7 @@
     <canvas id="myCanvas"></canvas>
     <input type="text" bind="val" style="opacity: 0;" value="" id="texto"/>
     <script src='https://snojs.github.io/sno/crystal.js'></script>
-    <script src="./gcon.js"></script>
+    <script src="./verbs/galician_present.js"></script>
     <script src="../moss.js"></script>
     <script src="../conjugator.js"></script>
 </body>
