--- a/basic/catalan/index.html
+++ b/basic/catalan/index.html
@@ -12,7 +12,7 @@
     <canvas id="myCanvas"></canvas>
     <input type="text" bind="val" style="opacity: 0;" value="Press ↓ to type." id="texto"/>
     <script src='https://snojs.github.io/sno/crystal.js'></script>
-    <script src="./german.js"></script>
+    <script src="./catalan.js"></script>
     <script src="../../moss.js"></script>
     <script src="../../index.js"></script>
 </body>
