--- a/con/galician_present.html
+++ b/con/galician_present.html
@@ -10,7 +10,7 @@
 </head>
 <body data="{val:''}">
     <canvas id="myCanvas"></canvas>
-    <input type="text" bind="val" style="opacity: 0;" value="" id="texto"/>
+    <input type="text" bind="val" autofocus style="opacity: 0;" value="" id="texto"/>
     <script src='https://snojs.github.io/sno/crystal.js'></script>
     <script src="./verbs/galician_present.js"></script>
     <script src="../moss.js"></script>
